Add login base redux
